Gestion arguments getMatches. Gestion asynchrone des demandes à l'aide d'un leaky bucket. Passage d'URL à URI.